--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<style>
+    body{
+        background-color: rgb(22,122,222);
+        }
+    video{
+        border-radius: 23px;
+        margin: 10vw;
+        width: 80vw;
+        }
+</style>
 <body oncontextmenu="return false">
 
     <video controls controlsList="nodownload"> <source src="https://firebasestorage.googleapis.com/v0/b/chat-9a308.appspot.com/o/Images%2F.mp4?alt=media&token=4b7dcbdb-6509-438c-881e-0e547993e7ee">
