--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     body{
         background-color: rgb(22,122,222);
         }
-    video{
+    video , #ad{
         border-radius: 23px;
         margin: 10vw;
         width: 80vw;
@@ -13,5 +13,9 @@
     <video controls controlsList="nodownload"> <source src="https://firebasestorage.googleapis.com/v0/b/chat-9a308.appspot.com/o/Images%2F.mp4?alt=media&token=4b7dcbdb-6509-438c-881e-0e547993e7ee">
 
     </video>
+    <div id ="ad">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4533038799674284"
 
+     crossorigin="anonymous"></script>
+        </div>
 </body>
