--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4533038799674284"
+       crossorigin="anonymous"></script>
 <style>
     body{
         background-color: rgb(22,122,222);
@@ -8,14 +11,11 @@
         width: 80vw;
         }
 </style>
+</head>
 <body oncontextmenu="return false">
 
     <video controls controlsList="nodownload"> <source src="https://firebasestorage.googleapis.com/v0/b/chat-9a308.appspot.com/o/Images%2F.mp4?alt=media&token=4b7dcbdb-6509-438c-881e-0e547993e7ee">
 
     </video>
-    <div id ="ad">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4533038799674284"
-
-     crossorigin="anonymous"></script>
-        </div>
+    
 </body>
