--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+<!Doctype html>
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4533038799674284"
      crossorigin="anonymous"></script>
@@ -19,3 +21,4 @@
     </video>
     
 </body>
+</html>
