--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body{
         background-color: rgb(22,122,222);
         }
-    video , #ad{
+    video {
         border-radius: 23px;
         margin: 10vw;
         width: 80vw;
