--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body{
         background-color: rgb(22,122,222);
         }
-    video {
+    video ,#ad{
         border-radius: 23px;
         margin: 10vw;
         width: 80vw;
@@ -19,6 +19,32 @@
     <video controls controlsList="nodownload"> <source src="https://firebasestorage.googleapis.com/v0/b/chat-9a308.appspot.com/o/Images%2F.mp4?alt=media&token=4b7dcbdb-6509-438c-881e-0e547993e7ee">
 
     </video>
+    <div id="ad"> 
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4533038799674284"
+
+     crossorigin="anonymous"></script>
+
+<!-- Ad -->
+
+<ins class="adsbygoogle"
+
+     style="display:block"
+
+     data-ad-client="ca-pub-4533038799674284"
+
+     data-ad-slot="3382438436"
+
+     data-ad-format="auto"
+
+     data-full-width-responsive="true"></ins>
+
+<script>
+
+     (adsbygoogle = window.adsbygoogle || []).push({});
+
+</script>
+        
+        </div>
     
 </body>
 </html>
