--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         }
     video ,#ad{
         border-radius: 23px;
-        margin: 10vw;
+        margin: 10vw 10vw 0 10vw;
         width: 80vw;
+        padding:0;
         }
 </style>
 </head>
