--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <ins class="adsbygoogle"
 
-     style="display:block; boeder: solid gray; border-radius:23px;"
+     style="display:block; border: solid gray; border-radius:23px;"
 
      data-ad-client="ca-pub-4533038799674284"
 
