--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </style>
 </head>
 <body oncontextmenu="return false">
-    <video controls controlsList="nodownload"> <source src="https://firebasestorage.googleapis.com/v0/b/chat-9a308.appspot.com/o/Images%2F.mp4?alt=media&token=4b7dcbdb-6509-438c-881e-0e547993e7ee">
-    </video>
+    <!--video controls controlsList="nodownload"> <source src="https://firebasestorage.googleapis.com/v0/b/chat-9a308.appspot.com/o/Images%2F.mp4?alt=media&token=4b7dcbdb-6509-438c-881e-0e547993e7ee">
+    </video-->
     <div id='app'></div>
 </body>
 <script>
