--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
-
-<!Doctype html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-    body{
-        background-color: rgb(22,122,222);
-        }
-    video ,#ad{
-        border-radius: 23px;
-        margin: 10vw 10vw 0 10vw;
-        width: 80vw;
-        padding:0;
-        }
-</style>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+  <link rel="stylesheet" href="./style.css" />
+  <title>Video Player</title>
+  <!-- S-Tech04 -->
+  <!-- www.youtube.com/c/STech04 -->
 </head>
-<body oncontextmenu="return false">
-    <!--video controls controlsList="nodownload"> <source src="https://firebasestorage.googleapis.com/v0/b/chat-9a308.appspot.com/o/Images%2F.mp4?alt=media&token=4b7dcbdb-6509-438c-881e-0e547993e7ee">
-    </video-->
-    <div id='app'></div>
+<body>
+  <section>
+    <div class="container">
+      <div class="video_player">
+        <video preload="metadata" class="main-video">
+          <source src="How to add twak.to chat app in website-480p.mp4" size="480" type="video/mp4">
+          <source src="How to add twak.to chat app in website-720p.mp4" size="720" type="video/mp4">
+          <source src="How to add twak.to chat app in website-1080p.mp4" size="1080" type="video/mp4">
+          <track label="English" kind="subtitles" src="./How To Get Started With VSCode.vtt" srclang="en">
+          <track label="Urdu" kind="subtitles" src="./test.vtt" srclang="en">
+        </video>
+      </div>
+
+      <div class="video_player">
+        <video preload="metadata" class="main-video">
+          <source src="How to generate subtitle file using HTML, CSS & JavaScript.mp4" size="1080" type="video/mp4">
+          <track label="English" kind="subtitles" src="./How To Get Started With VSCode.vtt" srclang="en">
+          <track label="Urdu" kind="subtitles" src="./test.vtt" srclang="en">
+        </video>
+      </div>
+    </div>
+    
+  </section>
+
+  <footer>
+    <span>Copyright &COPY; 2022
+      <a href="www.youtube.com/c/STech04">S-Tech04</a> | All rights
+      reserved</span>
+  </footer>
+  <script src="./script.js"></script>
 </body>
-<script>
-let ifrm = document.createElement('video');
-  ifrm.style.width = "100vw";
- let xhr = new XMLHttpRequest();
- xhr.open('GET', "https://firebasestorage.googleapis.com/v0/b/em-issyoo.appspot.com/o/Images%2F1668592284883?alt=media&token=21fb4390-cbe7-462f-9ee6-d4fac84d3c8f");
- xhr.responseType = 'arraybuffer';
- xhr.onload = (e) => {
- let blob = new Blob([xhr.response]);
- let url = URL.createObjectURL(blob);
-             ifrm.src = url;
-        alert('url'+ url);
-}
-xhr.send();
-             ifrm.style.maxHeight = '70vh';
-             ifrm.controls = true;
-             ifrm.controlsList="nodownload";
-             document.getElementById("app").appendChild(ifrm);
-</script>
+
 </html>
