--- a/upload.html
+++ b/upload.html
@@ -1,23 +1,59 @@
-<video id="video" src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4" controls></video><br/>
-<button onclick="capture()">Capture</button> <br/><br/>
-<canvas id="canvas"></canvas> <br/><br/>
-<button onclick="save()">Save</button> <br/><br/>
+<input type="file" accept=".jpg,.jpeg.,.gif,.png,.mov,.mp4" />
+
+<p><strong>Select a video or image file</strong><br /><br />Supported browsers (tested): Chrome, Firefox, Safari, Opera, IE10, IE11, Android (Chrome), iOS Safari (10+)</p>
+
+<div></div>
 <script>
-function capture(){
-    var canvas = document.getElementById('canvas');
-    var video = document.getElementById('video');
-    canvas.getContext('2d').drawImage(video, 0, 0, video.videoWidth, video.videoHeight);
-}
-
-
-
-/*Uncaught SecurityError: Failed to execute 'toDataURL' on 'HTMLCanvasElement': Tainted canvases may not be exported.
-(bc inside iframe, but we can still save the image by right-clicking on the generated canevas)
-*/
-function save(){
-    var canvas = document.getElementById('canvas');
-    return canvas.toDataURL("image/png");
-}
-
-
+document.getElementsByTagName('input')[0].addEventListener('change', function(event) {
+  var file = event.target.files[0];
+  var fileReader = new FileReader();
+  if (file.type.match('image')) {
+    fileReader.onload = function() {
+      var img = document.createElement('img');
+      img.src = fileReader.result;
+      document.getElementsByTagName('div')[0].appendChild(img);
+    };
+    fileReader.readAsDataURL(file);
+  } else {
+    fileReader.onload = function() {
+      var blob = new Blob([fileReader.result], {type: file.type});
+      var url = URL.createObjectURL(blob);
+      var video = document.createElement('video');
+      var timeupdate = function() {
+        if (snapImage()) {
+          video.removeEventListener('timeupdate', timeupdate);
+          video.pause();
+        }
+      };
+      video.addEventListener('loadeddata', function() {
+        if (snapImage()) {
+          video.removeEventListener('timeupdate', timeupdate);
+        }
+      });
+      var snapImage = function() {
+        var canvas = document.createElement('canvas');
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
+        var image = canvas.toDataURL();
+        var success = image.length > 100000;
+        if (success) {
+          var img = document.createElement('img');
+          img.src = image;
+          document.getElementsByTagName('div')[0].appendChild(img);
+          URL.revokeObjectURL(url);
+        }
+        return success;
+      };
+      video.addEventListener('timeupdate', timeupdate);
+      video.preload = 'metadata';
+      video.src = url;
+      // Load video in Safari / IE11
+      video.muted = true;
+      video.playsInline = true;
+      video.play();
+    };
+    fileReader.readAsArrayBuffer(file);
+  }
+});
 </script>
